Blender crash while using the Normal's "merge" option in edit mode (in the normal editing section) #65809

Closed
opened 2019-06-14 17:42:54 +02:00 by Arye Ramaty · 9 comments
Contributor

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-14 00:12, hash: 8ac0fef4df
Worked: (optional)

Short description of error
As the title, when you try to smooth some faces using the (Normal's)merge option (with kind of high-resolution mesh) blender crash, some times you have to repeat the action (5-7 times) for the crash to occur.

Exact steps for others to reproduce the error
open blender -> subdivide the default cube until it has 1500-+ verts -> select some faces -> execute : Mesh -> Normals -> Merge. if it isn't crash, try redoing the merge action around five - seven times.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-14 00:12, hash: `8ac0fef4df` Worked: (optional) **Short description of error** As the title, when you try to smooth some faces using the (Normal's)merge option (with kind of high-resolution mesh) blender crash, some times you have to repeat the action (5-7 times) for the crash to occur. **Exact steps for others to reproduce the error** open blender -> subdivide the default cube until it has 1500-+ verts -> select some faces -> execute : Mesh -> Normals -> Merge. if it isn't crash, try redoing the merge action around five - seven times.
Author
Contributor

Added subscriber: @aryeramaty

Added subscriber: @aryeramaty
Author
Contributor

I will not have access to the internet during Saturday so I wouldn't be able to give any clarification regarding this bug.

I will not have access to the internet during Saturday so I wouldn't be able to give any clarification regarding this bug.

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Bastien Montagne was assigned by Dalai Felinto 2019-06-14 18:23:07 +02:00

It is easy to reproduce.
Open file and run "Merge Normals":

merge-normals.blend

//source/blender/editors/mesh/editmesh_tools.c:8153:9: runtime error: member access within null pointer of type 'struct BMLoopNorEditData'

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555de742c6 in normals_merge (bm=0x6190004b0f88, lnors_ed_arr=0x603000139ea8) at //source/blender/editors/mesh/editmesh_tools.c:8153
8153            BLI_assert(lnor_ed_tmp->loop_index == loop_index && lnor_ed_tmp->loop == l);

Full backtrace: P1003

It is easy to reproduce. Open file and run "Merge Normals": [merge-normals.blend](https://archive.blender.org/developer/F7102996/merge-normals.blend) ``` //source/blender/editors/mesh/editmesh_tools.c:8153:9: runtime error: member access within null pointer of type 'struct BMLoopNorEditData' Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555de742c6 in normals_merge (bm=0x6190004b0f88, lnors_ed_arr=0x603000139ea8) at //source/blender/editors/mesh/editmesh_tools.c:8153 8153 BLI_assert(lnor_ed_tmp->loop_index == loop_index && lnor_ed_tmp->loop == l); ``` Full backtrace: [P1003](https://archive.blender.org/developer/P1003.txt)

@mont29 basically lnor_ed_tmp is NULL there.

@mont29 basically `lnor_ed_tmp` is NULL there.

This issue was referenced by 5767dcbe60

This issue was referenced by 5767dcbe60c07cd9ef113e2f54eaad6981a47bce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @S-ed-3

Added subscriber: @S-ed-3

@mont29

I've tested it on v2.81.4 (283d96de1170 ) and it's still crashing on merge.
But weirdly it happens only when I make the mesh prior to that. It does not happen when I open the file with the "same" mesh. You may try it on linked file but it won't crash.

NormalMerge.blend

2019-09-02 23-48-17.mp4

@mont29 I've tested it on v2.81.4 ([283d96de1170 ](https://developer.blender.org/rB283d96de1170f7c42a43bde4e30fdb438939978f)) and it's still crashing on merge. But weirdly it happens only when I make the mesh prior to that. It does not happen when I open the file with the "same" mesh. You may try it on linked file but it won't crash. [NormalMerge.blend](https://archive.blender.org/developer/F7714522/NormalMerge.blend) [2019-09-02 23-48-17.mp4](https://archive.blender.org/developer/F7714526/2019-09-02_23-48-17.mp4)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65809
No description provided.